# R-type

./: .gitignore  CMakeLists.txt  TODO  compile.sh
ECS/: CMakeLists.txt  shared-lib.sh
ECS/includes/: ASystem.hpp  AnotherMonster.hpp  Components.hpp  DynamicLoader.hpp  EntityFactory.hpp  EntityManager.hpp  GameEngine.hpp  GraphicComponent.hpp  GraphicSystem.hpp  IComponent.hpp  IData.hpp  IDynamicLoader.hpp  IEntityManager.hpp  IMonster.hpp  MessageBus.hpp  MyMonster.hpp  PhysicComponent.hpp  PhysicSystem.hpp  SystemManager.hpp  Systems.hpp  World.hpp
ECS/srcs/: ASystem.cpp  AnotherMonster.cpp  EntityManager.cpp  GameEngine.cpp  GraphicSystem.cpp  InputSystem.cpp  MessageBus.cpp  MyMonster.cpp  PhysicComponent.cpp  PhysicSystem.cpp  SystemManager.cpp  main.cpp
TOTO/: CMakeLists.txt
client/: CMakeLists.txt
client/includes/: CommandHandler.hpp  Core.hpp  GuiSystem.hpp  ISocket.hpp  Message.hpp  NetworkHandler.hpp  NetworkSystem.hpp  PlayerInputComponent.hpp  PlayerInputSystem.hpp  RTypeClient.hpp  RTypeUI.hpp  SpriteComponent.hpp  UnixSocket.hpp  clientMessages.hpp  entityInitialiser.hpp
client/srcs/: CommandHandler.cpp  GuiSystem.cpp  Main.cpp  Message.cpp  NetworkHandler.cpp  NetworkSystem.cpp  PlayerInputComponent.cpp  PlayerInputSystem.cpp  RTypeClient.cpp  RTypeUI.cpp  SpriteComponent.cpp  UnixSocket.cpp  WinSocket.cpp  coreGameLib.cpp  entityInitialiser.cpp
core_game_srcs/: CMakeLists.txt  HitBoxComponent.cpp
core_game_srcs/includes/: AnimationComponent.hpp  BasicMonsterScript.hpp  CollisionSystem.hpp  HealthComponent.hpp  HealthSystem.hpp  HitBoxComponent.hpp  IScript.hpp  MonsterSpawnScript.hpp  PhysicComponent.hpp  PhysicSystem.hpp  PositionComponent.hpp  ScriptComponent.hpp  ScriptSystem.hpp  SpriteComponent.hpp  coreGameSrcsMessages.hpp  strafingMonsterScript.hpp
core_game_srcs/srcs/: BasicMonsterScript.cpp  CollisionSystem.cpp  HealthComponent.cpp  HealthSystem.cpp  MonsterSpawnScript.cpp  PhysicComponent.cpp  PhysicSystem.cpp  PositionComponent.cpp  ScriptComponent.cpp  ScriptSystem.cpp  strafingMonsterScript.cpp
designDocuments/: RFC  RFC_rtype.txt  RType_server  client-rtype-sequence.xml  client-rtype.xml
mSFML/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  IGui.hpp  Timer.cpp  Window.cpp  Window.hpp
server/: .gitignore  CMakeLists.txt
server/includes/: Client.hpp  CommandHandler.hpp  CommandHandlerGame.hpp  ISocket.hpp  Message.hpp  NetworkHandler.hpp  RTypeServer.hpp  Room.hpp  RoomManager.hpp  SocketSelector.hpp  UnixSocket.hpp  WinSocket.hpp
server/includes_ecs/: CommandHandler.hpp  ISocket.hpp  NetworkComponent.hpp  NetworkHandler.hpp  NetworkSystem.hpp  RTypeClient.hpp  RTypeUI.hpp  WinSocket.hpp  clientMessages.hpp  serverMessages.hpp
server/srcs/: Client.cpp  CommandHandler.cpp  CommandHandlerGame.cpp  Main.cpp  Message.cpp  NetworkHandler.cpp  RTypeServer.cpp  Room.cpp  RoomManager.cpp  SocketSelector.cpp  UnixSocket.cpp  WinSocket.cpp
server/srcs_ecs/: CommandHandler.cpp  CommandHandler.cpp~  NetworkComponent.cpp  NetworkHandler.cpp  NetworkHandler.cpp~  NetworkSystem.cpp  PlayerInputSystem.cpp  RTypeClient.cpp  SpriteComponent.cpp  UnixSocket.cpp  UnixSocket.cpp~  coreGameLib.cpp
src/Client/: CommandHandler.cpp  CommandHandler.hpp  Core.cpp  Core.hpp  Message.cpp  Message.hpp  RTypeClient.cpp  UnixSocket.cpp  WinSocket.cpp
src/Server/: .gitignore  Client.hpp  CommandHandler.cpp  CommandHandler.hpp  CommandHandlerGame.hpp  ISocket.hpp  Main.cpp  Message.cpp  Message.hpp  NetworkHandler.cpp  NetworkHandler.hpp  RTypeServer.cpp  RTypeServer.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp  UnixSocket.cpp  UnixSocket.hpp  WinSocket.cpp  WinSocket.hpp
src/core_game_srcs/: CMakeLists.txt
src/core_game_srcs/includes/: GuiSystem.hpp  PhysicComponent.hpp  PhysicSystem.hpp  PositionComponent.hpp  coreGameLib.hpp
src/core_game_srcs/srcs/: GuiSystem.cpp  PhysicComponent.cpp  PhysicSystem.cpp  PlayerInputComponent.cpp  PositionComponent.cpp  SpriteComponent.cpp  coreGameLib.cpp
